--- a/code/notebooks/assistant.ipynb
+++ b/code/notebooks/assistant.ipynb
@@ -7,19 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 步骤1: 导入必要库\n",
     "import os\n",
     "import numpy as np\n",
     "import faiss\n",
     "import ollama\n",
     "from tqdm import tqdm\n",
-    "import pickle\n",
-    "import time"
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "97b8c4ef",
    "metadata": {},
    "outputs": [
@@ -38,7 +36,7 @@
     "# 步骤2: 配置常量\n",
     "EMBEDDING_MODEL = \"nomic-embed-text\"\n",
     "VECTOR_STORE_DIR = \"./vector_stores\"\n",
-    "INDEX_NAME = \"my_documents\"  # 替换为您的索引名称\n",
+    "INDEX_NAME = \"my_documents\"\n",
     "MODEL_NAME = \"llama3.2:latest\" \n",
     "\n",
     "# 步骤3: 加载向量存储\n",
@@ -103,44 +101,12 @@
     "        return f\"查询失败: {str(e)}\", []\n",
     "\n",
     "# 步骤5: 交互式文档查询\n",
-    "print(\"🚀 文档助手已启动! 输入 'exit' 退出\")\n",
-    "\n",
-    "# while True:\n",
-    "#     try:\n",
-    "#         # 获取用户输入\n",
-    "#         question = input(\"\\n👤 您的问题: \")\n",
-    "#         if question.lower() in ['exit', 'quit']:\n",
-    "#             print(\"再见!\")\n",
-    "#             break\n",
-    "            \n",
-    "#         if not question.strip():\n",
-    "#             continue\n",
-    "            \n",
-    "#         # 查询文档\n",
-    "#         start_time = time.time()\n",
-    "#         answer, sources = query_documents(question, index, chunks, metadata)\n",
-    "#         elapsed = time.time() - start_time\n",
-    "        \n",
-    "#         # 显示结果\n",
-    "#         print(f\"\\n🤖 助手 (响应时间: {elapsed:.2f}s):\")\n",
-    "#         print(answer)\n",
-    "        \n",
-    "#         # 显示来源\n",
-    "#         if sources:\n",
-    "#             print(\"\\n📚 来源:\")\n",
-    "#             for i, source in enumerate(sources):\n",
-    "#                 print(f\"{i+1}. {source['filename']} - 第{source['page']}页\")\n",
-    "    \n",
-    "#     except KeyboardInterrupt:\n",
-    "#         print(\"\\n再见!\")\n",
-    "#         break\n",
-    "#     except Exception as e:\n",
-    "#         print(f\"❌ 错误: {str(e)}\")"
+    "print(\"🚀 文档助手已启动! 输入 'exit' 退出\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bb40c41a",
    "metadata": {},
    "outputs": [
@@ -149,23 +115,19 @@
      "output_type": "stream",
      "text": [
       "🤖 助手回答:\n",
-      "根据提供的文本，Energy Distance是一个统计量，它被定义为：\n",
+      "根据给出的文本，Energy Distance 是一种统计量，是一种基于距离的统计量，它描述了两个多维随机变量X和Y之间的关系。\n",
       "\n",
-      "E(X,Y) = E[Xd - Yd] - E[Xd - X'd] - E[Yd - Y'd]\n",
+      "具体来说，Energy Distance 定义为：\n",
       "\n",
-      "其中，Xd、Yd、X'd 和 Y'd 分别代表 X、Y、X' 和 Y' 的 d 维 random variable。\n",
+      "E(X,Y) = 2E[ Xi - Yj ] + E[X' - Xj] + E[Y' - Yj]\n",
       "\n",
-      "在公式 (2.4) 中，E(X,Y) 表示 X 和 Y 的多元分布之间的距离。这个距离被称为 Energy Distance，它具有以下特性：\n",
+      "其中，Xi 和 Yi 是 independent 的一维 random variable，X' 和 Y' 是 iid 复制的 random variable。\n",
       "\n",
-      "* 如果 X 和 Y 是相同分布，则 Energy Distance 为 0\n",
-      "* Energy Distance 是非负数\n",
-      "* Energy Distance 与其逆 (X'、Y') 分别独立和相互换位时的对称性有关\n",
+      "此定义可以通过 Parseval-Plancherel 公式来推导出来，这个公式描述了多维空间中函数之间的内积与二维空间中函数之间的内积之间的关系。\n",
       "\n",
-      "根据公式 (2.6)，Energy Distance 的表达式可以写成：\n",
+      "根据 Székely 和 Rizzo (2005a) 的研究，Energy Distance 是一种非负的统计量，它可以用来衡量两个 random variable 之间的相似性或差异。\n",
       "\n",
-      "E(X,Y) = 1/2 cd \\* [j^f(t) - j^g(t)]^2 dt\n",
-      "\n",
-      "其中，cd 是一个常数，j^f(t) 和 j^g(t) 分别代表 X 和 Y 的特征函数。\n",
+      "总之，Energy Distance 是一种基于距离的统计量，描述了两个多维随机变量之间的关系和相似性。\n",
       "\n",
       "📚 来源:\n",
       "1. Energy statistics- A class of statistics based on distances.pdf - 第4页\n",
