--- a/code/notebooks/build_vector_store.ipynb
+++ b/code/notebooks/build_vector_store.ipynb
@@ -6,22 +6,7 @@
    "id": "156da348",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "import re\n",
-    "import gc\n",
-    "import time\n",
-    "import numpy as np\n",
-    "import faiss\n",
-    "import fitz  # PyMuPDF\n",
-    "from tqdm import tqdm\n",
-    "import ollama  # 确保已安装ollama Python包\n",
-    "\n",
-    "# 配置常量\n",
-    "EMBEDDING_MODEL = \"nomic-embed-text\"  # 替换为你的嵌入模型\n",
-    "VECTOR_STORE_DIR = \"./vector_stores\"  # 向量存储保存目录\n",
-    "MODEL_NAME = \"llama3.2:latest\" "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -41,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "📄 处理PDF文件: 100%|██████████| 1/1 [00:00<00:00,  5.82it/s]\n"
+      "📄 处理PDF文件: 100%|██████████| 1/1 [00:00<00:00,  6.09it/s]\n"
      ]
     },
     {
@@ -58,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🧠 生成嵌入: 100%|██████████| 2/2 [00:05<00:00,  3.00s/it]"
+      "🧠 生成嵌入: 100%|██████████| 2/2 [00:06<00:00,  3.13s/it]"
      ]
     },
     {
@@ -80,6 +65,20 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import re\n",
+    "import gc\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import faiss\n",
+    "import fitz\n",
+    "from tqdm import tqdm\n",
+    "import ollama \n",
+    "\n",
+    "EMBEDDING_MODEL = \"nomic-embed-text\"\n",
+    "VECTOR_STORE_DIR = \"./vector_stores\"\n",
+    "MODEL_NAME = \"llama3.2:latest\"\n",
+    "\n",
     "def build_pdf_vector_store(directory_path, index_name=\"default_index\", max_chars_per_page=50000, batch_size=50):\n",
     "    \"\"\"\n",
     "    端到端构建PDF向量存储系统\n",
@@ -320,107 +319,6 @@
     "        # 示例：检索相似内容\n",
     "        query = \"什么是机器学习?\"\n",
     "        query_embed = ollama.embeddings(model=EMBEDDING_MODEL, prompt=query)['embedding']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "386ad1f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def query_documents(question, index, chunks, metadata, model_name=MODEL_NAME, k=5):\n",
-    "    \"\"\"\n",
-    "    使用RAG（检索增强生成）技术回答问题\n",
-    "    :param question: 用户问题\n",
-    "    :param index: FAISS索引\n",
-    "    :param chunks: 文本块列表\n",
-    "    :param metadata: 元数据列表\n",
-    "    :param model_name: 使用的Ollama模型名称\n",
-    "    :param k: 返回的相似文本块数量\n",
-    "    :return: 模型生成的答案\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # 1. 将问题转换为嵌入向量\n",
-    "        response = ollama.embeddings(\n",
-    "            model=EMBEDDING_MODEL,\n",
-    "            prompt=question\n",
-    "        )\n",
-    "        query_embedding = response['embedding']\n",
-    "        \n",
-    "        # 2. 在FAISS索引中搜索相似内容\n",
-    "        query_embedding = np.array([query_embedding], dtype=np.float32)\n",
-    "        distances, indices = index.search(query_embedding, k)\n",
-    "        \n",
-    "        # 3. 检索相关文本块\n",
-    "        context_chunks = [chunks[i] for i in indices[0] if i < len(chunks)]\n",
-    "        context_metadata = [metadata[i] for i in indices[0] if i < len(metadata)]\n",
-    "        \n",
-    "        # 4. 构造上下文提示\n",
-    "        context = \"\\n\\n\".join([\n",
-    "            f\"来源: {meta['filename']} 第{meta['page']}页\\n内容: {chunk}\"\n",
-    "            for chunk, meta in zip(context_chunks, context_metadata)\n",
-    "        ])\n",
-    "        \n",
-    "        # 5. 构造完整提示\n",
-    "        prompt = f\"\"\"\n",
-    "        你是一个专业的文档助手，请基于以下上下文信息回答问题。\n",
-    "        如果信息不在上下文中，请如实回答你不知道。\n",
-    "        \n",
-    "        上下文:\n",
-    "        {context}\n",
-    "        \n",
-    "        问题: {question}\n",
-    "        回答:\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        # 6. 调用模型生成回答\n",
-    "        response = ollama.chat(\n",
-    "            model=model_name,\n",
-    "            messages=[{'role': 'user', 'content': prompt}]\n",
-    "        )\n",
-    "        \n",
-    "        return response['message']['content'], context_metadata\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        return f\"查询失败: {str(e)}\", []\n",
-    "\n",
-    "def interactive_chat(index, chunks, metadata, model_name=\"llama3\"):\n",
-    "    \"\"\"与文档进行交互式对话\"\"\"\n",
-    "    print(\"🚀 文档助手已启动! 输入 'exit' 退出\")\n",
-    "    \n",
-    "    while True:\n",
-    "        try:\n",
-    "            # 获取用户输入\n",
-    "            question = input(\"\\n👤 您的问题: \")\n",
-    "            if question.lower() in ['exit', 'quit']:\n",
-    "                break\n",
-    "                \n",
-    "            if not question.strip():\n",
-    "                continue\n",
-    "                \n",
-    "            # 查询文档\n",
-    "            start_time = time.time()\n",
-    "            answer, sources = query_documents(\n",
-    "                question, index, chunks, metadata, model_name\n",
-    "            )\n",
-    "            elapsed = time.time() - start_time\n",
-    "            \n",
-    "            # 显示结果\n",
-    "            print(f\"\\n🤖 助手 (响应时间: {elapsed:.2f}s):\")\n",
-    "            print(answer)\n",
-    "            \n",
-    "            # 显示来源\n",
-    "            if sources:\n",
-    "                print(\"\\n📚 来源:\")\n",
-    "                for i, meta in enumerate(sources):\n",
-    "                    print(f\"{i+1}. {meta['filename']} - 第{meta['page']}页\")\n",
-    "        \n",
-    "        except KeyboardInterrupt:\n",
-    "            print(\"\\n再见!\")\n",
-    "            break\n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ 错误: {str(e)}\")"
    ]
   },
   {
