update git ignore

--- a/code/notebooks/build_vector_store.ipynb
+++ b/code/notebooks/build_vector_store.ipynb
@@ -2,15 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "156da348",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0011c82c",
    "metadata": {},
    "outputs": [
@@ -26,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "📄 处理PDF文件: 100%|██████████| 1/1 [00:00<00:00,  6.09it/s]\n"
+      "📄 处理PDF文件: 100%|██████████| 1/1 [00:00<00:00,  6.27it/s]\n"
      ]
     },
     {
@@ -43,17 +35,66 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🧠 生成嵌入: 100%|██████████| 2/2 [00:06<00:00,  3.13s/it]"
+      "🧠 生成嵌入:   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "索引创建成功! 维度: 768 | 向量数: 60\n",
+      "🔄 重试 1/3: 块 0 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 0 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 0 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 1 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 1 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 1 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 2 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 2 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 2 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 3 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 3 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 3 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 4 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 4 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 4 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 5 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 5 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 5 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 6 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 6 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 6 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 7 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 7 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 7 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 8 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 8 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 8 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 9 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 9 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 9 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 10 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 10 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "❌ 块 10 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
+      "🔄 重试 1/3: 块 11 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
+      "🔄 重试 2/3: 块 11 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "🧠 生成嵌入: 100%|██████████| 2/2 [00:41<00:00, 20.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ 移除了 11 个失败的嵌入\n",
+      "索引创建成功! 维度: 768 | 向量数: 49\n",
       "\n",
       "💾 保存向量存储到: ./vector_stores/my_documents.faiss\n",
-      "✅ 向量存储构建完成! 索引大小: 60 个向量\n"
+      "✅ 向量存储构建完成! 索引大小: 49 个向量\n"
      ]
     },
     {
