--- a/code/notebooks/assistant.ipynb
+++ b/code/notebooks/assistant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "9f453ed3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "97b8c4ef",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 成功加载向量存储 | 索引大小: 60\n",
+      "✅ 成功加载向量存储 | 索引大小: 202\n",
       "🚀 文档助手已启动! 输入 'exit' 退出\n"
      ]
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bb40c41a",
    "metadata": {},
    "outputs": [
@@ -115,30 +115,58 @@
      "output_type": "stream",
      "text": [
       "🤖 助手回答:\n",
-      "根据给出的文本，Energy Distance 是一种统计量，是一种基于距离的统计量，它描述了两个多维随机变量X和Y之间的关系。\n",
-      "\n",
-      "具体来说，Energy Distance 定义为：\n",
-      "\n",
-      "E(X,Y) = 2E[ Xi - Yj ] + E[X' - Xj] + E[Y' - Yj]\n",
-      "\n",
-      "其中，Xi 和 Yi 是 independent 的一维 random variable，X' 和 Y' 是 iid 复制的 random variable。\n",
-      "\n",
-      "此定义可以通过 Parseval-Plancherel 公式来推导出来，这个公式描述了多维空间中函数之间的内积与二维空间中函数之间的内积之间的关系。\n",
-      "\n",
-      "根据 Székely 和 Rizzo (2005a) 的研究，Energy Distance 是一种非负的统计量，它可以用来衡量两个 random variable 之间的相似性或差异。\n",
-      "\n",
-      "总之，Energy Distance 是一种基于距离的统计量，描述了两个多维随机变量之间的关系和相似性。\n",
+      "TIME-LLM是通过重编程大型语言模型来实现时间系列 forecasting 的方法。它通过将时间系列数据转换为自然语言的prototype，并利用 Prompt-as-Prefix 批量激活 LLMs，以实现高性能的时间 series forecasting。\n",
       "\n",
       "📚 来源:\n",
-      "1. Energy statistics- A class of statistics based on distances.pdf - 第4页\n",
-      "2. Energy statistics- A class of statistics based on distances.pdf - 第3页\n",
-      "3. Energy statistics- A class of statistics based on distances.pdf - 第5页\n"
+      "1. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第6页\n",
+      "2. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第9页\n",
+      "3. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第5页\n"
      ]
     }
    ],
    "source": [
-    "# 直接在单元格中提问\n",
-    "question = \"what is energy distance\"\n",
+    "question = \"what is time llm\"\n",
+    "answer, sources = query_documents(question, index, chunks, metadata)\n",
+    "\n",
+    "print(f\"🤖 助手回答:\\n{answer}\\n\")\n",
+    "print(\"📚 来源:\")\n",
+    "for i, source in enumerate(sources):\n",
+    "    print(f\"{i+1}. {source['filename']} - 第{source['page']}页\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2488c371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 助手回答:\n",
+      "根据提供的文本信息，TIME-LLM（Time Series Forecasting using Large Language Models）和TabPFN（Transformer That Solves Small Tabular Classification Problems in a Second）是两个不同的机器学习模型。\n",
+      "\n",
+      "TIME-LLM 是用于时间序列预测的Large Language Model（LLM），它通过使用Llama-7B作为底层模型，结合 transformer技术来实现时间序列预测。它在各种基线和竞争性模型上表现出卓越的效果，尤其是在少shot和零-shot场景中。\n",
+      "\n",
+      "TabPFN 则是用于表格分类任务的Transformer模型，它通过对特定类型的表格数据进行训练，展示出在快速运行和调优阶段都能获得优异的性能。它在数字数据中表现最强大，并且在长时间运行期间也取得了良好的结果。\n",
+      "\n",
+      "比较TIME-LLM和TabPFN的主要区别在于它们是用于不同类型的问题的模型：\n",
+      "\n",
+      "* TIME-LLM 是用于时间序列预测的模型。\n",
+      "* TabPFN 是用于表格分类任务的模型。\n",
+      "\n",
+      "尽管两者都使用Transformer技术，但它们有不同的设计和训练目标。TIME-LLM 的重点是利用大型语言模型来解决时间序列预测的问题，而TabPFN 的重点则是在快速运行和调优阶段获得高性能。\n",
+      "\n",
+      "📚 来源:\n",
+      "1. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第22页\n",
+      "2. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第33页\n",
+      "3. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第6页\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"time llm vs tab pfn, what is the difference\"\n",
     "answer, sources = query_documents(question, index, chunks, metadata)\n",
     "\n",
     "print(f\"🤖 助手回答:\\n{answer}\\n\")\n",
@@ -150,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2488c371",
+   "id": "a9fcc6ee",
    "metadata": {},
    "outputs": [],
    "source": []
