ignore doc str check

--- a/code/notebooks/assistant.ipynb
+++ b/code/notebooks/assistant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "9f453ed3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "97b8c4ef",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bb40c41a",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "output_type": "stream",
      "text": [
       "🤖 助手回答:\n",
-      "TIME-LLM是通过重编程大型语言模型来实现时间系列 forecasting 的方法。它通过将时间系列数据转换为自然语言的prototype，并利用 Prompt-as-Prefix 批量激活 LLMs，以实现高性能的时间 series forecasting。\n",
+      "TIME-LLM是指通过重programming大型语言模型（Large Language Model）来适应时间系列预测任务的框架。它利用了自然语言指导（Prompt-as-Prefix）和多头关联层（Multi-head Attention Layer）等技术，能够有效地将时间序列数据转换为可以被语言模型理解的形式，从而实现时间系列预测。\n",
       "\n",
       "📚 来源:\n",
       "1. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第6页\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "2488c371",
    "metadata": {},
    "outputs": [
@@ -145,18 +145,13 @@
      "output_type": "stream",
      "text": [
       "🤖 助手回答:\n",
-      "根据提供的文本信息，TIME-LLM（Time Series Forecasting using Large Language Models）和TabPFN（Transformer That Solves Small Tabular Classification Problems in a Second）是两个不同的机器学习模型。\n",
+      "根据提供的文本信息，TabPFN（Transformer for Tabular Prediction）和TIME-LLM（Time Series Forecasting by Reprogramming Large Language Models）的区别在于：\n",
       "\n",
-      "TIME-LLM 是用于时间序列预测的Large Language Model（LLM），它通过使用Llama-7B作为底层模型，结合 transformer技术来实现时间序列预测。它在各种基线和竞争性模型上表现出卓越的效果，尤其是在少shot和零-shot场景中。\n",
+      "1. 类型：TabPFN是用于解决小尺寸表格分类问题的Transformer模型，而TIME-LLM是用于时间系列预测的 Transformer模型。\n",
+      "2. 应用场景：TabPFN主要用于解决小尺寸表格分类问题，特别是那些没有缺失特征的情况下；TIME-LLM则用于时间系列预测和重现。\n",
+      "3. 性能：TIME-LLM在时间系列预测方面表现出优于其他方法的巨大优势，包括在少量shot和零个-shot场景中。TabPFN虽然对小尺寸表格分类问题有很好的性能，但在长期预测中没有 TIME-LLM 相同的优势。\n",
       "\n",
-      "TabPFN 则是用于表格分类任务的Transformer模型，它通过对特定类型的表格数据进行训练，展示出在快速运行和调优阶段都能获得优异的性能。它在数字数据中表现最强大，并且在长时间运行期间也取得了良好的结果。\n",
-      "\n",
-      "比较TIME-LLM和TabPFN的主要区别在于它们是用于不同类型的问题的模型：\n",
-      "\n",
-      "* TIME-LLM 是用于时间序列预测的模型。\n",
-      "* TabPFN 是用于表格分类任务的模型。\n",
-      "\n",
-      "尽管两者都使用Transformer技术，但它们有不同的设计和训练目标。TIME-LLM 的重点是利用大型语言模型来解决时间序列预测的问题，而TabPFN 的重点则是在快速运行和调优阶段获得高性能。\n",
+      "总的来说，TIME-LLM是专门设计用于时间系列预测的Transformer模型，而TabPFN则是一个更广泛应用于表格分类的问题的Transformer模型。\n",
       "\n",
       "📚 来源:\n",
       "1. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第22页\n",
@@ -177,11 +172,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a9fcc6ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🤖 助手回答:\n",
+      "根据 TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf 的内容，我们可以看到以下几点关于时间比较的信息：\n",
+      "\n",
+      "1. TabPFN 在计算机上运行速度非常快，平均每 4.4 秒就可以处理一个数据集，这远比其他基线方法快得多。\n",
+      "2. TabPFN 的总体时间（包括调整和预测）大于或等于其他基线方法。\n",
+      "3. tabpfn 和 other baselines 的 time taken for combined fitting, tuning and prediction 分别在 Table 2 中。\n",
+      "\n",
+      "为了比较结果，从这些信息中我们可以看到 TabPFN 在运行速度方面是其他基线方法的明显优势。\n",
+      "\n",
+      "📚 来源:\n",
+      "1. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第22页\n",
+      "2. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第9页\n",
+      "3. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第33页\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"how to compare results from times llm and tabpfn\"\n",
+    "answer, sources = query_documents(question, index, chunks, metadata)\n",
+    "\n",
+    "print(f\"🤖 助手回答:\\n{answer}\\n\")\n",
+    "print(\"📚 来源:\")\n",
+    "for i, source in enumerate(sources):\n",
+    "    print(f\"{i+1}. {source['filename']} - 第{source['page']}页\")"
+   ]
   }
  ],
  "metadata": {
