--- a/code/notebooks/build_vector_store.ipynb
+++ b/code/notebooks/build_vector_store.ipynb
@@ -11,14 +11,14 @@
      "output_type": "stream",
      "text": [
       "📂 开始处理目录: /Users/stephenzhang/Desktop/AB_test\n",
-      "发现 1 个PDF文件，开始处理...\n"
+      "发现 3 个PDF文件，开始处理...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "📄 处理PDF文件: 100%|██████████| 1/1 [00:00<00:00,  6.27it/s]\n"
+      "📄 处理PDF文件:  67%|██████▋   | 2/3 [00:00<00:00,  5.91it/s]"
      ]
     },
     {
@@ -26,75 +26,41 @@
      "output_type": "stream",
      "text": [
       "✅ 成功加载: Energy statistics- A class of statistics based on distances.pdf | 页数: 25 | 块数: 60\n",
+      "✅ 成功加载: TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf | 页数: 24 | 块数: 66\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📄 处理PDF文件: 100%|██████████| 3/3 [00:00<00:00,  5.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 成功加载: TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf | 页数: 37 | 块数: 76\n",
       "\n",
-      "🛠️ 开始创建向量存储 (共60个文本块)\n",
-      "生成嵌入向量 (共60个块)...\n"
+      "🛠️ 开始创建向量存储 (共202个文本块)\n",
+      "生成嵌入向量 (共202个块)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🧠 生成嵌入:   0%|          | 0/2 [00:00<?, ?it/s]"
+      "🧠 生成嵌入: 100%|██████████| 7/7 [00:19<00:00,  2.75s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔄 重试 1/3: 块 0 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 0 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 0 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 1 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 1 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 1 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 2 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 2 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 2 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 3 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 3 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 3 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 4 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 4 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 4 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 5 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 5 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 5 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 6 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 6 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 6 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 7 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 7 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 7 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 8 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 8 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 8 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 9 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 9 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 9 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 10 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 10 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "❌ 块 10 嵌入请求最终失败: Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https://ollama.com/download\n",
-      "🔄 重试 1/3: 块 11 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n",
-      "🔄 重试 2/3: 块 11 嵌入请求失败 (Failed to connect to Ollama. Please check that Ollama is downloaded, running and accessible. https:/)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "🧠 生成嵌入: 100%|██████████| 2/2 [00:41<00:00, 20.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚠️ 移除了 11 个失败的嵌入\n",
-      "索引创建成功! 维度: 768 | 向量数: 49\n",
+      "索引创建成功! 维度: 768 | 向量数: 202\n",
       "\n",
       "💾 保存向量存储到: ./vector_stores/my_documents.faiss\n",
-      "✅ 向量存储构建完成! 索引大小: 49 个向量\n"
+      "✅ 向量存储构建完成! 索引大小: 202 个向量\n"
      ]
     },
     {
