--- a/code/notebooks/assistant.ipynb
+++ b/code/notebooks/assistant.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9f453ed3",
+   "execution_count": null,
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "97b8c4ef",
+   "execution_count": null,
+   "id": "1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ 成功加载向量存储 | 索引大小: 202\n",
-      "🚀 文档助手已启动! 输入 'exit' 退出\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# 步骤2: 配置常量\n",
     "EMBEDDING_MODEL = \"nomic-embed-text\"\n",
     "VECTOR_STORE_DIR = \"./vector_stores\"\n",
@@ -106,24 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bb40c41a",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🤖 助手回答:\n",
-      "TIME-LLM是指通过重programming大型语言模型（Large Language Model）来适应时间系列预测任务的框架。它利用了自然语言指导（Prompt-as-Prefix）和多头关联层（Multi-head Attention Layer）等技术，能够有效地将时间序列数据转换为可以被语言模型理解的形式，从而实现时间系列预测。\n",
-      "\n",
-      "📚 来源:\n",
-      "1. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第6页\n",
-      "2. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第9页\n",
-      "3. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第5页\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"what is time llm\"\n",
     "answer, sources = query_documents(question, index, chunks, metadata)\n",
@@ -136,30 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2488c371",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🤖 助手回答:\n",
-      "根据提供的文本信息，TabPFN（Transformer for Tabular Prediction）和TIME-LLM（Time Series Forecasting by Reprogramming Large Language Models）的区别在于：\n",
-      "\n",
-      "1. 类型：TabPFN是用于解决小尺寸表格分类问题的Transformer模型，而TIME-LLM是用于时间系列预测的 Transformer模型。\n",
-      "2. 应用场景：TabPFN主要用于解决小尺寸表格分类问题，特别是那些没有缺失特征的情况下；TIME-LLM则用于时间系列预测和重现。\n",
-      "3. 性能：TIME-LLM在时间系列预测方面表现出优于其他方法的巨大优势，包括在少量shot和零个-shot场景中。TabPFN虽然对小尺寸表格分类问题有很好的性能，但在长期预测中没有 TIME-LLM 相同的优势。\n",
-      "\n",
-      "总的来说，TIME-LLM是专门设计用于时间系列预测的Transformer模型，而TabPFN则是一个更广泛应用于表格分类的问题的Transformer模型。\n",
-      "\n",
-      "📚 来源:\n",
-      "1. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第22页\n",
-      "2. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第33页\n",
-      "3. TIME-LLM- TIME SERIES FORECASTING BY REPROGRAMMING LARGE LANGUAGE MODELS.pdf - 第6页\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"time llm vs tab pfn, what is the difference\"\n",
     "answer, sources = query_documents(question, index, chunks, metadata)\n",
@@ -172,30 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a9fcc6ee",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🤖 助手回答:\n",
-      "根据 TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf 的内容，我们可以看到以下几点关于时间比较的信息：\n",
-      "\n",
-      "1. TabPFN 在计算机上运行速度非常快，平均每 4.4 秒就可以处理一个数据集，这远比其他基线方法快得多。\n",
-      "2. TabPFN 的总体时间（包括调整和预测）大于或等于其他基线方法。\n",
-      "3. tabpfn 和 other baselines 的 time taken for combined fitting, tuning and prediction 分别在 Table 2 中。\n",
-      "\n",
-      "为了比较结果，从这些信息中我们可以看到 TabPFN 在运行速度方面是其他基线方法的明显优势。\n",
-      "\n",
-      "📚 来源:\n",
-      "1. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第22页\n",
-      "2. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第9页\n",
-      "3. TabPFN- A Transformer That Solves Small Tabular Classification Problems in a Second.pdf - 第33页\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "question = \"how to compare results from times llm and tabpfn\"\n",
     "answer, sources = query_documents(question, index, chunks, metadata)\n",
@@ -205,6 +140,30 @@
     "for i, source in enumerate(sources):\n",
     "    print(f\"{i+1}. {source['filename']} - 第{source['page']}页\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"whats the difference between time llm and LLMs- Multi-Wavelet Number Embeddings\"\n",
+    "answer, sources = query_documents(question, index, chunks, metadata)\n",
+    "\n",
+    "print(f\"🤖 Answer:\\n{answer}\\n\")\n",
+    "print(\"📚 来源:\")\n",
+    "for i, source in enumerate(sources):\n",
+    "    print(f\"{i+1}. {source['filename']} - 第{source['page']}页\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
